Дополнения к переводу ивента на англ

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-12-18 01:53+0300\n"
-"PO-Revision-Date: 2022-12-18 01:58+0300\n"
+"PO-Revision-Date: 2022-12-18 13:43+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -461,7 +461,7 @@ msgstr "Halloween event"
 #: player/templates/player/redesign/overview.html:275
 msgctxt "overview"
 msgid "С новым годом!"
-msgstr ""
+msgstr "Happy New Year!"
 
 #: player/templates/player/redesign/overview.html:441
 msgctxt "overview"
