фиксы испанской локали

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-12-18 18:19+0300\n"
-"PO-Revision-Date: 2022-12-18 18:19+0300\n"
+"PO-Revision-Date: 2022-12-19 22:43+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -249,7 +249,7 @@ msgstr "Evento de Halloween en WP"
 #: player/templates/player/redesign/game_event/halloween.html:218
 msgctxt "game_event"
 msgid "играй как обычно - и получай награды!"
-msgstr "juega de seguido y obtén recompensas"
+msgstr "¡juega de seguido y obtén recompensas!"
 
 #: player/templates/player/redesign/game_event/halloween.html:219
 msgctxt "game_event"
@@ -280,44 +280,32 @@ msgstr "- el primero en la lista de progresión del juego para avatar"
 #: player/templates/player/redesign/game_event/newyear.html:218
 msgctxt "game_event"
 msgid "С новым годом!"
-msgstr ""
+msgstr "¡Feliz año nuevo!"
 
 #: player/templates/player/redesign/game_event/newyear.html:221
 msgctxt "game_event"
 msgid "общий"
-msgstr ""
+msgstr "general"
 
 #: player/templates/player/redesign/game_event/newyear.html:222
-#, fuzzy
-#| msgctxt "goods"
-#| msgid "Наличные"
 msgctxt "game_event"
 msgid "личный"
-msgstr "Efectivo"
+msgstr "prersonal"
 
 #: player/templates/player/redesign/game_event/newyear.html:390
-#, fuzzy
-#| msgctxt "game_event"
-#| msgid "Награды события:"
 msgctxt "game_event"
 msgid "Новогоднее событие в WP:"
-msgstr "Recompensas"
+msgstr "Evento de año nuevo en WP:"
 
 #: player/templates/player/redesign/game_event/newyear.html:391
-#, fuzzy
-#| msgctxt "game_event"
-#| msgid "- первая прогрессионная рамка для аватара в игре"
 msgctxt "game_event"
 msgid "игровые ценности и новые рамки для аватара в двух прогрессиях!"
-msgstr "- el primero en la lista de progresión del juego para avatar"
+msgstr "¡premios del juego y nuevos marcos de avatar en dos progresiones!"
 
 #: player/templates/player/redesign/game_event/newyear.html:392
-#, fuzzy
-#| msgctxt "game_event"
-#| msgid "Награды события:"
 msgctxt "game_event"
 msgid "Личная прогрессия события"
-msgstr "Recompensas"
+msgstr "Progresión personal del evento"
 
 #: player/templates/player/redesign/game_event/newyear.html:393
 msgctxt "game_event"
@@ -325,6 +313,8 @@ msgid ""
 "Заполняется расходованием энергии, как и ежедневное финансирование, и "
 "зависит только от твоих личных усилий."
 msgstr ""
+"Se llena con gasto energético, como la financiación diaria, y depende "
+"únicamente de tu esfuerzo personal."
 
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
@@ -332,19 +322,18 @@ msgid ""
 "Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один "
 "из трёх этапов зимней прогрессионой рамки аватара."
 msgstr ""
+"Le permitirá obtener una cuenta premium para un juego cómodo, así como una "
+"de las tres etapas de progresión del marco de avatar de invierno."
 
 #: player/templates/player/redesign/game_event/newyear.html:395
-#, fuzzy
-#| msgctxt "game_event"
-#| msgid "Награды события:"
 msgctxt "game_event"
 msgid "Общая прогрессия события"
-msgstr "Recompensas"
+msgstr "Progresión general del evento"
 
 #: player/templates/player/redesign/game_event/newyear.html:396
 msgctxt "game_event"
 msgid "Заполняется усилиями всех игроков сервера."
-msgstr ""
+msgstr "Se llena con los esfuerzos de todos los jugadores en el servidor."
 
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
@@ -352,6 +341,8 @@ msgid ""
 "Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь "
 "соответствующий этап личной."
 msgstr ""
+"No podrás recoger las recompensas desbloqueadas en la progresión general "
+"hasta que completes la etapa correspondiente de la personal."
 
 #: player/templates/player/redesign/game_event/newyear.html:398
 msgctxt "game_event"
@@ -359,6 +350,8 @@ msgid ""
 "Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы "
 "получить свою награду"
 msgstr ""
+"Cuando se abra la siguiente etapa de la progresión general, gasta energía "
+"para obtener tu recompensa"
 
 #: player/templates/player/redesign/menu.html:7
 msgctxt "menu"
@@ -378,7 +371,7 @@ msgstr "almacén"
 #: player/templates/player/redesign/menu.html:39
 msgctxt "menu"
 msgid "активы"
-msgstr "avtivos"
+msgstr "activos"
 
 #: player/templates/player/redesign/menu.html:57
 msgctxt "menu"
@@ -467,7 +460,7 @@ msgstr "Evento de Halloween"
 #: player/templates/player/redesign/overview.html:275
 msgctxt "overview"
 msgid "С новым годом!"
-msgstr ""
+msgstr "¡Felíz año nuevo!"
 
 #: player/templates/player/redesign/overview.html:441
 msgctxt "overview"
@@ -756,7 +749,7 @@ msgstr "sobre mi"
 #: player/templates/player/redesign/profile.html:399
 msgctxt "profile"
 msgid "показывать партийный фон"
-msgstr "ver historial de partidos"
+msgstr "ver fondo de partidos"
 
 #: player/templates/player/redesign/profile.html:415
 msgctxt "profile"
@@ -775,7 +768,7 @@ msgstr "guardar"
 #: player/templates/player/redesign/view_profile.html:67
 msgctxt "profile"
 msgid "был в сети"
-msgstr "estuba en línea"
+msgstr "estaba en línea"
 
 #: player/templates/player/redesign/view_profile.html:69
 msgid "давно"
@@ -940,7 +933,7 @@ msgstr "Trabajar"
 #: region/templates/region/redesign/mining.html:11
 msgctxt "daily_header"
 msgid "Потрать энергию и получи"
-msgstr "Gasta energía y obtén"
+msgstr "¡Gasta energía y obtén"
 
 #: region/templates/region/redesign/mining.html:12
 msgctxt "daily_header"
@@ -950,7 +943,7 @@ msgstr "hasta"
 #: region/templates/region/redesign/mining.html:12
 msgctxt "daily_header"
 msgid "за день!"
-msgstr "¡al día!"
+msgstr "al día!"
 
 #: region/templates/region/redesign/mining.html:15
 msgctxt "daily_header"
@@ -963,7 +956,7 @@ msgstr "energía gastada"
 #: region/templates/region/redesign/mining.html:110
 msgctxt "daily_header"
 msgid "в полете"
-msgstr "en vuelo"
+msgstr "volando"
 
 #: region/templates/region/redesign/mining.html:27
 msgctxt "daily_header"
@@ -978,7 +971,7 @@ msgstr "consigue"
 #: region/templates/region/redesign/mining.html:46
 msgctxt "daily_header"
 msgid "уже получено"
-msgstr "ya recivido"
+msgstr "canjeado"
 
 #: region/templates/region/redesign/mining.html:50
 msgctxt "mining"
@@ -1305,7 +1298,7 @@ msgstr "Diesel"
 #: storage/models/transport.py:130
 msgctxt "goods"
 msgid "Пластик"
-msgstr "Plastico"
+msgstr "Plástico"
 
 #: state/models/treasury.py:71 storage/models/destroy.py:46
 #: storage/models/factory/production_log.py:50
@@ -1325,7 +1318,7 @@ msgstr "Acero"
 #: storage/templates/storage/redesign/storage.html:211
 msgctxt "goods"
 msgid "Алюминий"
-msgstr "Aliminio"
+msgstr "Aluminio"
 
 #: state/models/treasury.py:78 storage/models/destroy.py:52
 #: storage/models/factory/production_log.py:56
@@ -1361,7 +1354,7 @@ msgstr "Tanques"
 #: storage/models/transport.py:160
 msgctxt "goods"
 msgid "Штурмовики"
-msgstr "Avión de combate"
+msgstr "Aviónes de combate"
 
 #: state/models/treasury.py:91 storage/models/destroy.py:62
 #: storage/models/factory/production_log.py:69 storage/models/storage.py:79
@@ -1886,7 +1879,7 @@ msgstr "Cuenta"
 #: storage/templates/storage/redesign/storage.html:170
 msgctxt "storage_assets"
 msgid "использовать"
-msgstr "usar Contraseña Wild"
+msgstr "usar Wild Pass"
 
 #: storage/templates/storage/redesign/storage.html:189
 #: storage/templates/storage/redesign/storage.html:371
@@ -2267,24 +2260,24 @@ msgstr "Fondos insuficientes para pagar el envío"
 #: storage/views/assets/assets_action.py:125
 msgctxt "assets"
 msgid "На складе в регионе "
-msgstr "Al almacén en el"
+msgstr "En el almacén de "
 
 #: storage/views/assets/assets_action.py:117
 msgctxt "assets"
 msgid " недостаточно места для товара "
-msgstr "Espacio insuficiente para los bienes"
+msgstr "no hay espacio suficiente para "
 
 #: storage/views/assets/assets_action.py:118
 #: storage/views/assets/assets_action.py:127
 msgctxt "assets"
 msgid "Требуется: "
-msgstr "Requiere:"
+msgstr "Requiere: "
 
 #: storage/views/assets/assets_action.py:118
 #: storage/views/assets/assets_action.py:127
 msgctxt "assets"
 msgid ", в наличии: "
-msgstr ", en stock"
+msgstr ", en stock: "
 
 #: storage/views/assets/assets_action.py:126
 msgctxt "assets"
