--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-01-22 02:13+0300\n"
-"PO-Revision-Date: 2023-01-13 20:12+0300\n"
+"PO-Revision-Date: 2023-02-02 13:58+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -60,9 +60,6 @@ msgid "no_common_borders"
 msgstr ""
 
 #: factory/models/factory/factory.py:29
-#, fuzzy
-#| msgctxt "storage"
-#| msgid "Уровень"
 msgctxt "factory"
 msgid "Уровень"
 msgstr "Nivel"
@@ -126,7 +123,7 @@ msgstr "Medicinas"
 #: storage/models/storage.py:176 storage/models/trade_offer.py:89
 msgctxt "goods"
 msgid "Буровые установки"
-msgstr ""
+msgstr "Taladros"
 
 #: factory/models/project.py:148 state/models/treasury.py:85
 #: storage/models/destroy.py:58 storage/models/storage.py:76
@@ -1336,15 +1333,12 @@ msgstr "Calidad del Mineral"
 #: region/templates/region/redesign/region_info.html:65
 msgctxt "map"
 msgid "Вы здесь"
-msgstr ""
+msgstr "estas aquí"
 
 #: region/templates/region/redesign/region_info.html:71
-#, fuzzy
-#| msgctxt "menu"
-#| msgid "правительство"
 msgctxt "map"
 msgid "отправиться"
-msgstr "gobierno"
+msgstr "volar"
 
 #: region/templates/region/region_info.html:39
 msgid "Вы летите в"
@@ -1708,12 +1702,9 @@ msgid "Медикаменты - лимит"
 msgstr "Medicinas - límite"
 
 #: storage/models/storage.py:178
-#, fuzzy
-#| msgctxt "goods"
-#| msgid "Бокситы - лимит"
 msgctxt "goods"
 msgid "Буры - лимит"
-msgstr "Bauxita - límite"
+msgstr "Taladro - límite"
 
 #: storage/models/storage.py:184
 msgctxt "goods"
@@ -2248,32 +2239,32 @@ msgstr "todo el dinero"
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:7
 msgctxt "no_storage"
 msgid "склад в регионе"
-msgstr "Coste de creación"
+msgstr "Crear un almacén en"
 
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:9
 msgctxt "no_storage"
 msgid "Стоимость создания"
-msgstr "del acero"
+msgstr "cuesta:"
 
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:10
 msgctxt "no_storage"
 msgid "стали"
-msgstr "del hierro"
+msgstr "de hierro"
 
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:10
 msgctxt "no_storage"
 msgid "алюминия"
-msgstr "del aluminio"
+msgstr "de aluminio"
 
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:11
 msgctxt "no_storage"
 msgid "доставка оплачивается отдельно"
-msgstr "envío pagado por separado"
+msgstr "pago de envío  por separado"
 
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:16
 msgctxt "no_storage"
 msgid "выберите склад списания материалов"
-msgstr "seleccione un almacén de cancelación"
+msgstr "seleccione un almacén de origen"
 
 #: storage/templates/storage/redesign/storage_blocks/no_storage.html:22
 msgctxt "no_storage"
