--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-02-02 20:27+0300\n"
-"PO-Revision-Date: 2023-02-02 13:58+0300\n"
+"PO-Revision-Date: 2023-02-07 13:04+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -194,12 +194,9 @@ msgstr ""
 #: factory/views/produce_good.py:106 factory/views/produce_good.py:116
 #: factory/views/produce_good.py:124 factory/views/produce_good.py:132
 #: factory/views/produce_good.py:170 factory/views/produce_good.py:189
-#, fuzzy
-#| msgctxt "menu"
-#| msgid "производство"
 msgctxt "factory"
 msgid "Ошибка производства"
-msgstr "producción"
+msgstr "Error de producción"
 
 #: factory/views/produce_good.py:33 factory/views/produce_good.py:44
 #: factory/views/produce_good.py:60 factory/views/produce_good.py:72
@@ -207,113 +204,72 @@ msgstr "producción"
 #: factory/views/produce_good.py:107 factory/views/produce_good.py:117
 #: factory/views/produce_good.py:125 factory/views/produce_good.py:133
 #: factory/views/produce_good.py:171 factory/views/produce_good.py:190
-#, fuzzy
-#| msgid "Закрыть"
 msgctxt "storage"
 msgid "Закрыть"
 msgstr "Cerrar"
 
 #: factory/views/produce_good.py:42
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "Склад не заполнен"
 msgctxt "factory"
 msgid "Склад не заполнен"
 msgstr "Almacén no especificado"
 
 #: factory/views/produce_good.py:58
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "Указанный Склад вам не принадлежит"
 msgctxt "factory"
 msgid "Указанный Склад вам не принадлежит"
 msgstr "El Almacén especificado no le pertenece"
 
 #: factory/views/produce_good.py:70
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Указанный товар не существует"
 msgctxt "factory"
 msgid "Указанный товар не существует"
-msgstr "El recurso elegido no existe"
+msgstr "El bien elegido no existe"
 
 #: factory/views/produce_good.py:84
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Количество - не число"
 msgctxt "factory"
 msgid "Номер схемы - не число"
-msgstr "La cantidad no es un número"
+msgstr "El esquema no es un número"
 
 #: factory/views/produce_good.py:94
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Указанный товар не существует"
 msgctxt "factory"
 msgid "Указанной схемы не существует"
-msgstr "El recurso elegido no existe"
+msgstr "El esquema elegido no existe"
 
 #: factory/views/produce_good.py:105
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Количество - не число"
 msgctxt "factory"
 msgid "Количество - не число"
 msgstr "La cantidad no es un número"
 
 #: factory/views/produce_good.py:115
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Количество товара должно быть положительным числом"
 msgctxt "factory"
 msgid "Количество товара должно быть положительным числом"
 msgstr "La cantidad del objeto debe ser un número positivo"
 
 #: factory/views/produce_good.py:123
-#, fuzzy
-#| msgctxt "w_trading_new"
-#| msgid "Количество товара слишком велико"
 msgctxt "factory"
 msgid "Количество товара слишком велико"
 msgstr "La cantidad del producto es demasiado larga"
 
 #: factory/views/produce_good.py:134
-#, fuzzy
-#| msgctxt "assets"
-#| msgid " недостаточно места для товара "
 msgctxt "factory"
 msgid "Недостаточно места на складе для товара. В наличии "
-msgstr " no hay espacio suficiente para "
+msgstr "Espacio insuficiente. Libere espacio"
 
 #: factory/views/produce_good.py:135 factory/views/produce_good.py:172
 #: factory/views/produce_good.py:192
-#, fuzzy
-#| msgctxt "assets"
-#| msgid "Требуется: "
 msgctxt "factory"
 msgid ", требуется "
-msgstr "Requiere: "
+msgstr ", requiere"
 
 #: factory/views/produce_good.py:172
-#, fuzzy
-#| msgctxt "mining"
-#| msgid "Недостаточно энергии"
 msgctxt "factory"
 msgid "Недостаточно энергии. В наличии "
-msgstr "No hay suficiente energía"
+msgstr "No hay suficiente energía. Ahora"
 
 #: factory/views/produce_good.py:191
-#, fuzzy
-#| msgctxt "mining"
-#| msgid "Недостаточно энергии"
 msgctxt "factory"
 msgid "Недостаточно "
-msgstr "No hay suficiente energía"
+msgstr "No hay suficiente"
 
 #: factory/views/produce_good.py:191
-#, fuzzy
-#| msgctxt "assets"
-#| msgid ", в наличии: "
 msgctxt "factory"
 msgid ". В наличии "
 msgstr ", en stock: "
@@ -321,30 +277,22 @@ msgstr ", en stock: "
 #: factory/views/produce_good.py:242
 msgctxt "factory"
 msgid "Внезапно!"
-msgstr ""
+msgstr "¡Repentinamente!"
 
 #: factory/views/produce_good.py:243
-#, fuzzy
-#| msgctxt "game_event"
-#| msgid "личный"
 msgctxt "factory"
 msgid "Отлично!"
-msgstr "prersonal"
+msgstr "¡Excelente!"
 
 #: factory/views/produce_good.py:244
-#, fuzzy
-#| msgctxt "daily_header"
-#| msgid "получаем"
 msgctxt "factory"
 msgid "Вы получили "
-msgstr "recibiendo..."
+msgstr "Recives"
 
 #: factory/views/produce_good.py:244
-#, fuzzy
-#| msgid "Золото"
 msgctxt "factory"
 msgid " золота"
-msgstr "Oro"
+msgstr "de oro"
 
 #: gov/templates/state/gov/forms/foreign_right.html:21
 #: party/templates/party/party_requests.html:36
@@ -1121,7 +1069,7 @@ msgstr "Baterías en autominado"
 #: player/templates/player/redesign/profile.html:431
 msgctxt "profile"
 msgid "Скрыть кнопку Wiki"
-msgstr ""
+msgstr "Ocultar botón de Wiki"
 
 #: player/templates/player/redesign/profile.html:462
 msgctxt "profile"
