--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-02-02 20:27+0300\n"
-"PO-Revision-Date: 2023-02-07 13:04+0300\n"
+"PO-Revision-Date: 2023-02-09 15:32+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -251,13 +251,13 @@ msgstr "La cantidad del producto es demasiado larga"
 #: factory/views/produce_good.py:134
 msgctxt "factory"
 msgid "Недостаточно места на складе для товара. В наличии "
-msgstr "Espacio insuficiente. Libere espacio"
+msgstr "Espacio insuficiente. Libere espacio "
 
 #: factory/views/produce_good.py:135 factory/views/produce_good.py:172
 #: factory/views/produce_good.py:192
 msgctxt "factory"
 msgid ", требуется "
-msgstr ", requiere"
+msgstr "Requiere:"
 
 #: factory/views/produce_good.py:172
 msgctxt "factory"
@@ -277,7 +277,7 @@ msgstr ", en stock: "
 #: factory/views/produce_good.py:242
 msgctxt "factory"
 msgid "Внезапно!"
-msgstr "¡Repentinamente!"
+msgstr "¡Sorpresa!"
 
 #: factory/views/produce_good.py:243
 msgctxt "factory"
@@ -287,12 +287,12 @@ msgstr "¡Excelente!"
 #: factory/views/produce_good.py:244
 msgctxt "factory"
 msgid "Вы получили "
-msgstr "Recives"
+msgstr "Recibes "
 
 #: factory/views/produce_good.py:244
 msgctxt "factory"
 msgid " золота"
-msgstr "de oro"
+msgstr " de oro"
 
 #: gov/templates/state/gov/forms/foreign_right.html:21
 #: party/templates/party/party_requests.html:36
