--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-02-02 20:27+0300\n"
-"PO-Revision-Date: 2023-02-09 15:32+0300\n"
+"PO-Revision-Date: 2023-02-09 18:15+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -257,7 +257,7 @@ msgstr "Espacio insuficiente. Libere espacio "
 #: factory/views/produce_good.py:192
 msgctxt "factory"
 msgid ", требуется "
-msgstr "Requiere:"
+msgstr ", requiere"
 
 #: factory/views/produce_good.py:172
 msgctxt "factory"
@@ -1009,7 +1009,7 @@ msgstr "lugar de calificación"
 #: player/templates/player/redesign/view_profile.html:78
 msgctxt "profile"
 msgid "(к рейтингу)"
-msgstr "(al Top)"
+msgstr "(del Top)"
 
 #: player/templates/player/redesign/profile.html:195
 #: player/templates/player/redesign/view_profile.html:84
@@ -1099,7 +1099,7 @@ msgstr "Operaciones "
 #: player/templatetags/redesign/wallet_locks.py:40
 msgctxt "wallet"
 msgid "Блокировки"
-msgstr "Se bloqueará"
+msgstr "Bloqueado"
 
 #: player/templates/player/redesign/wallet.html:56
 #: player/templatetags/redesign/wallet_cash.py:24
@@ -1174,19 +1174,19 @@ msgstr "Cantidad"
 #: player/templatetags/redesign/wallet_locks.py:34
 msgctxt "wallet"
 msgid "Блокировано"
-msgstr "Se bloqueará"
+msgstr "Bloqueado"
 
 #: player/templatetags/redesign/wallet_operations.py:18
 #: player/templatetags/redesign/wallet_operations.py:19
 msgctxt "wallet"
 msgid "Время"
-msgstr "Tiempo"
+msgstr "Fecha y hora"
 
 #: player/templatetags/redesign/wallet_operations.py:24
 #: player/templatetags/redesign/wallet_operations.py:25
 msgctxt "wallet"
 msgid "Изменение"
-msgstr "Cambiar"
+msgstr "Cambio"
 
 #: player/templatetags/redesign/wallet_operations.py:30
 #: player/templatetags/redesign/wallet_operations.py:31
